--- a/1024homework.js/index.html
+++ b/1024homework.js/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     div {
       border: 1px solid black;
       margin-bottom: 20px;
-    }
+    }q
   </style>
 </head>
 
@@ -67,7 +67,170 @@
     <p class="q5-text">色を変えてください3</p>
   </div>
 
+  <div>
+    <p>Q6</p>
+    <p>以下のテキストがクリックされた時、クリックされた要素の文字の色を変更する</p>
+
+    <br>
+
+    <p id="q6-text">Click Me!!!</p>
+  </div>
+
+  <div>
+    <p>Q7</p>
+    <p>以下のテキストがマウスオーバーされた時、 <br>
+      マウスオーバーされた要素の背景色と文字色を変更する
+    </p>
+
+    <br>
+
+    <p id="q7-text">Mouse Over Me!!!</p>
+  </div>
+
+  <div>
+    <p>Q8</p>
+    <p>
+      以下のテキストがマウスオーバーされた時、 <br>
+      マウスオーバーされた要素の背景色を変更する。 <br>
+      またマウスが外れた時、背景色を元に戻す
+    </p>
+
+    <br>
+
+    <p id="q8-text">Mouse Over Me!!!</p>
+  </div>
+
+  <div>
+    <p>Q9</p>
+    <p>
+      Checkボタンがクリックされた時、<br>
+      入力された名前をpタグに表示してください
+    </p>
+
+    <br>
+    <labe>名前</labe>
+    <input type="text" id="q9-input">
+    <button id="q-9btn" onclick="submit()">Check</button>
+
+    <p id="q-9result"></p>
+  </div>
+
+  <div>
+    <p>Q10</p>
+    <p>
+      Checkボタンがクリックされた時、<br>
+      入力された年齢をpタグに表示してください <br>
+      ただし、年齢が20未満の場合には、<br>
+      「20歳未満の方の利用は禁止です。」と表示してください。
+    </p>
+
+    <br>
+    <labe>年齢</labe>
+    <input type="number" id="q10-input">
+    <button class="q10-btn" onclick="submit2()">Check</button>
+
+    <p id="q10-result"></p>
+  </div>
+
+  <div>
+    <p>Q11</p>
+    <p>
+      Checkボタンがクリックされた時、<br>
+      入力された名前と年齢をpタグに表示してください。<br>
+      ただし、年齢が20未満の場合には、<br>
+      「20歳未満の方の利用は禁止です。」、<br>
+      名前が空欄の場合には、<br>
+      「名前が空欄です」と <span style="color:red">赤文字で</span> 表示してください。<br>
+    </p>
+    <br>
+
+    <labe>名前</labe>
+    <input type="text" id="q11-input-name" name="username">
+    <br>
+
+    <labe>年齢</labe>
+    <input type="number" id="q11-input-age" name="age">
+    <br>
+
+    <button class="q11-btn" onclick="submit3()">Check</button>
+
+    <p id="q11-result-name"></p>
+    <p id="q11-result-age"></p>
+  </div>
+
+  <div>
+    <p>Q12</p>
+    <p>
+      ボタンがクリックされたときに、<br>
+      押されたボタンと同じテキストを持つ、<br>
+      pタグを作成して画面に表示する
+    </p>
+    <br>
+    <button class="q12-btn">Google</button>
+
+    <div class="q12-result"></div>
+
+  </div>
+
+  <div>
+    <p>Q13</p>
+    <p>
+      「追加」をクリックしたときに<br>
+      「リンゴ」をリストの先頭に追加してください
+    </p>
+    <br>
+    <button class="q13-btn">追加</button>
+    <ul id="q13-box">
+      <li>メロン</li>
+      <li>みかん</li>
+    </ul>
+  </div>
+
+  <div>
+    <p>Q14</p>
+    <p>
+      削除ボタンがクリックされたときに、<br>
+      「ニワトリ」をリストから削除してください
+    </p>
+
+    <br>
+    <button class="q14-btn" onclick="submit6()">削除</button>
+    <ul>
+      <li id="swallow">ツバメ</li>
+      <li id="crow">カラス</li>
+      <li id="chicken">ニワトリ</li>
+    </ul>
+  </div>
+
+  <div>
+    <p>Q15</p>
+    <p>
+      以下のボタンがクリックされたとき、<br>
+      それぞれのテキストに合うリンクを作成する。<br>
+      Google: https://google.com <br>
+      Youtube: https://youtube.com <br>
+      Amazon: https://amazon.com
+    </p>
+    <p>
+      例 Googleの場合 <br>
+      '&lt;a href="https://google.com"&gt;google&lt;a&gt;'
+    </p>
+
+    <br>
+
+    <button class="q15-btn">Google</button>
+    <button class="q15-btn">YouTube</button>
+    <button class="q15-btn">Amazon</button>
+
+    <br>
+    <div class="q15-link-list">
+
+    </div>
+
+  </div>
+
   <script src="app2.js"></script>
+  <!-- <script src="answer.js"></script> -->
 </body>
 
 </html>
