15以外の宿題

--- a/1027homework.js/index.html
+++ b/1027homework.js/index.html
@@ -152,7 +152,7 @@
     <input type="number" id="q11-input-age" name="age">
     <br>
 
-    <button class="q11-btn" onclick="submit3()">Check</button>
+    <button class="q11-btn">Check</button>
 
     <p id="q11-result-name"></p>
     <p id="q11-result-age"></p>
@@ -181,7 +181,7 @@
     <br>
     <button class="q13-btn">追加</button>
     <ul id="q13-box">
-      <li>メロン</li>
+      <li class="melon">メロン</li>
       <li>みかん</li>
     </ul>
   </div>
@@ -194,7 +194,7 @@
     </p>
 
     <br>
-    <button class="q14-btn" onclick="submit6()">削除</button>
+    <button class="q14-btn">削除</button>
     <ul>
       <li id="swallow">ツバメ</li>
       <li id="crow">カラス</li>
