--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -4,7 +4,7 @@
 <title>STOP DOING LIST</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="todo.css">
-<script src="https://kit.fontawesome.com/685dc3ddb0.js" crossorigin="anonymous"></script>
+<!-- <script src="https://kit.fontawesome.com/685dc3ddb0.js" crossorigin="anonymous"></script> -->
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@500&display=swap" rel="stylesheet">
 </head>
 
@@ -13,10 +13,10 @@
   <h1 class="title">STOP DOING LIST</h1>
    <form>
    	<input class="input" type="text" placeholder="Add your list here" >
-　　<button class="button">Add</button>
+　　 <input type="button" class="btn" value="Add">
    </form>
   	  <ul class="stop_list">
-                <li class="list">Over-apologizing
+               <!--  <li class="list">Over-apologizing
                     <div class="delete"><i class="fas fa-check"></i></div>
                 </li>
                 <li class="list">Comparing yourself to others
@@ -33,9 +33,10 @@
                 </li>
                  <li class="list">Being afraid to fail
                     <div class="delete"><i class="fas fa-check"></i></div>
-                </li>
+                </li> -->
             </ul>
-            
+             <script src='todo.js'></script>
   </header>
+
 </body>
 </html>
