--- a/1027homework.js/index.html
+++ b/1027homework.js/index.html
@@ -110,7 +110,7 @@
     <br>
     <labe>名前</labe>
     <input type="text" id="q9-input">
-    <button id="q-9btn" onclick="submit()">Check</button>
+    <button id="q-9btn">Check</button>
 
     <p id="q-9result"></p>
   </div>
@@ -127,7 +127,7 @@
     <br>
     <labe>年齢</labe>
     <input type="number" id="q10-input">
-    <button class="q10-btn" onclick="submit2()">Check</button>
+    <button class="q10-btn">Check</button>
 
     <p id="q10-result"></p>
   </div>
@@ -231,6 +231,7 @@
 
   <script src="app2.js"></script>
   <!-- <script src="answer.js"></script> -->
+
 </body>
 
 </html>
