--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>STOP DOING LIST</title>
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="todo.css">
+<link rel="stylesheet" type="text/css" href="./css/todo.css">
 <!-- <script src="https://kit.fontawesome.com/685dc3ddb0.js" crossorigin="anonymous"></script> -->
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -35,8 +35,11 @@
                     <div class="delete"><i class="fas fa-check"></i></div>
                 </li> -->
             </ul>
-             <script src='todo.js'></script>
+             <script src='./js/todo.js'></script>
   </header>
 
 </body>
 </html>
+
+
+
