--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -4,7 +4,7 @@
 <title>STOP DOING LIST</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="./css/todo.css">
-<!-- <script src="https://kit.fontawesome.com/685dc3ddb0.js" crossorigin="anonymous"></script> -->
+<script src="https://kit.fontawesome.com/685dc3ddb0.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@500&display=swap" rel="stylesheet">
 </head>
 
@@ -15,8 +15,8 @@
    	<input class="input" type="text" placeholder="Add your list here" >
 　　 <input type="button" class="btn" value="Add">
    </form>
-  	  <ul class="stop_list">
-               <!--  <li class="list">Over-apologizing
+  	  <ul class="stop-list">
+              <!--   <li class="list">Over-apologizing
                     <div class="delete"><i class="fas fa-check"></i></div>
                 </li>
                 <li class="list">Comparing yourself to others
