--- a/jQuery_practice_ver2/jQuery_邱ｴ鄙堤畑/index.html
+++ b/jQuery_practice_ver2/jQuery_邱ｴ鄙堤畑/index.html
@@ -140,20 +140,20 @@
       </p>
       <div class="margin-left">
         <ul class="tab-nav">
-          <li><a href="#tab01" class="active">HTML</a></li>
-          <li><a href="#tab02">CSS</a></li>
+          <li><a href="#tab01" >HTML</a></li>
+          <li><a href="#tab02" class="active" >CSS</a></li>
           <li><a href="#tab03">Javascript</a></li>
         </ul>
         <div class="clearfix"></div>
         <div class="tab-content">
-            <div id="tab01" class="active">
+            <div id="tab01" >
               HTMLとは HTMLとは、Hyper Text Markup Language
               （ハイパーテキスト・マークアップ・ランゲージ）の略で、
               Webページを作るための最も基本的なマークアップ言語のひとつです。
               普段、私たちがブラウザで観ているWebページのほとんどが、
               HTMLで作られています。
             </div>
-            <div id="tab02">
+            <div id="tab02" class="active">
               CSS（Cascading Style Sheets、カスケーディング・スタイル・シート）とは、
               ウェブページのスタイルを指定するための言語です。
             </div>
