--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-<title>STOP DOING LIST</title>
+<title>TO DO LIST</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="./css/todo.css">
-<script src="https://kit.fontawesome.com/685dc3ddb0.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
-  <h1 class="title">STOP DOING LIST</h1>
+  <h1 class="title">TO DO LIST</h1>
    <form>
    	<input class="input" type="text" placeholder="Add your list here" >
 　　 <input type="button" class="btn" value="Add">
@@ -35,6 +35,10 @@
                     <div class="delete"><i class="fas fa-check"></i></div>
                 </li> -->
             </ul>
+       <div>    
+      <h2 class="title">DONE</h2>
+      <ul class='done'></ul>
+       </div> 
              <script src='./js/todo.js'></script>
   </header>
 
