--- a/HP(kurashiru)/shinya1010.html
+++ b/HP(kurashiru)/shinya1010.html
@@ -17,13 +17,19 @@
     <div class="header-left">
 		<p><a href=""><img class="logo" src="images/kurashiru_logo-d94be8fdb7366edee8c0f9fe35e6474e13900aae177a0bb438f003ccf496b15a.png"></a></p>
       <p id='hamburger-btn' class="js-hamburger hamburger"><span></span></p>
+        <!-- ドロワー -->
+    <div id="drower-bg"></div>
+    <ul class="drower js-drower">
+      <li class="js-register">新規登録</li>
+      <li class="js-login">ログイン</li>
+    </ul>
 		<div class="search">
 		<input type="search" name="search" placeholder="キーワードを入力">
     	<input type="submit" name="submit" value="検索">
     	</div>
       </div>
 		<nav>
-		<ul class="main-nav">
+		<ul class="main-nav"> 
 			<div class="sign-up">
 			<li><img class="logo2"src="images/6542370.png"></li>
 			<li><a href="">Sign-up</a></li>
