--- a/slider/index.html
+++ b/slider/index.html
@@ -1,5 +1,6 @@
 <html>
 	  <head>
+	  	 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/css/swiper.min.css">
 	    <link rel="stylesheet" type="text/css" href="style.css">
 	  </head>
